veygo-app/main/default/objects/Customer_Support__c/fields/AccountId__c.field-meta.xml
<CustomField>
    <fullName>AccountId__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Customer Supports</relationshipLabel>
    <relationshipName>Customer_Supports</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>