veygo-app/main/default/objects/Customer_Support__c/fields/Details__c.field-meta.xml
<CustomField>
    <fullName>Details__c</fullName>
    <label>Customer support details</label>
    <type>TextArea</type>
</CustomField>