veygo-app/main/default/objects/Customer_Support__c/fields/Scripting_complete__c.field-meta.xml
<CustomField>
    <fullName>Scripting_complete__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Scripting complete</label>
    <type>Checkbox</type>
</CustomField>