veygo-app/main/default/objects/Customer_Support__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Customer support type</label>
    <length>50</length>
    <type>Text</type>
</CustomField>